Fix align items for box img in auth pages

--- a/src/resources/scss/signin.scss
+++ b/src/resources/scss/signin.scss
@@ -114,7 +114,6 @@ input {
   font-size: 55px;
   font-weight: 800;
   margin: 0;
-  margin-top: 20px;
   font-family: "Times New Roman", Times, serif;
 }
 
